# vortex-asv

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  codecov.yml  dependencies.repos  docker-compose.yml  entrypoint.sh  frames.gv  key  key.pub  sim_config.rviz
asv_setup/: CMakeLists.txt  README.md  package.xml
asv_setup/config/: freya.yaml  topics.yaml
asv_setup/config/params/: gnc.yaml
asv_setup/config/robots/: ASV.yaml  freya.yaml  naglfar.yaml  temp_config.yaml
asv_setup/config/sitaw/: land_polygon_grillstad.yaml  land_polygon_office.yaml  land_polygon_sim_maneuvering.yaml  land_polygon_sim_navigation.yaml  landmark_server_params.yaml  map_manager_params.yaml  seapath_params.yaml
asv_setup/launch/: ASV_simulator.launch.py  freya.launch  freya.launch.py  freya_sim.launch.py  hybridpath.launch.py  launch_to_erase.yaml  lidar_slam.launch  naglfar.launch  parameter_manager_to_erase.launch.py  pc.launch  pc.launch.py  pc.launch.yaml  pc.yaml  shoreside.launch.py  sim_freya.launch.py  sitaw.launch.py  tf.launch  tf.launch.py  tf.launch.yaml  tf.yaml  vessel_sim.launch.py
asv_setup/scripts/: parameter_manager_node.py
control/hybridpath_controller/: CMakeLists.txt  README.md  package.xml
control/hybridpath_controller/config/: hybridpath_controller_config.yaml
control/hybridpath_controller/hybridpath_controller/: adaptive_backstep.py  hybridpath_controller_node.py
control/hybridpath_controller/launch/: hybridpath_controller.launch.py
guidance/d_star_lite/: CMakeLists.txt  README.md  package.xml  setup.cfg
guidance/d_star_lite/d_star_lite/: README.md  __init__.py  d_star_lite.py  d_star_lite_node.py  ros_d_star_lite_node.py
guidance/d_star_lite/launch/: d_star_lite.launch.py
guidance/d_star_lite/test/: test_d_star_lite.py
guidance/d_star_lite/tests/: test_d_star_lite.py
guidance/hybridpath_guidance/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
guidance/hybridpath_guidance/config/: hybridpath_guidance_config.yaml
guidance/hybridpath_guidance/hybridpath_guidance/: hp_guidance_utils.py  hp_ref_msg.txt  hybridpath.py  hybridpath_guidance_node.py  noisy_odom_publisher.py  u_desired_node.py  waypoint_node.py
guidance/hybridpath_guidance/launch/: hybridpath_guidance.launch.py
guidance/hybridpath_guidance/tests/: test_hybridpath.py
mission/BouysTasksNjord/: Bouys_task_test.py  CMakeLists.txt  Interface.md  bouys_tasks.py  bouys_tasks_FSM.py  bouys_tasks_fsm.py  closest_bouy_node.py  closest_buoy_node.py  package.xml  setup.py  update_objects_data.py  update_userdata.py
mission/Njord_tasks/: CMakeLists.txt  fsm_njord.py  package.xml  setup.py
mission/Njord_tasks/scripts/: fsm_njord.py  fsm_states.py
mission/blackbox/: README  README.md  blackbox.sh  blackbox_startup copy.service  draft1.py  draft2.py  draft3.py  package.xml  record_data.py  setup.cfg  setup.py  test.py  test2.py  test3.py
mission/blackbox/blackbox/: blackbox_log_data.py  blackbox_node.py
mission/blackbox/launch/: blackbox.launch.py
mission/blackbox/rosdata_2024-02-22_16:08:07.bag/: metadata.yaml
mission/blackbox/rosdata_2024-02-22_16:09:02.bag/: metadata.yaml  rosdata_2024-02-22_16:09:02.bag_0.mcap
mission/blackbox/startup_scripts/: blackbox.service
mission/blackbox/test_turtlesim/: metadata.yaml  rosdata_2024-01-25 15:30:29.bag_0.mcap
mission/docking_task/: CMakeLists.txt  package.xml
mission/docking_task/src/: docking_task_node.cpp  docking_task_ros.cpp
mission/failsafe_interface/: CMakeLists.txt  package.xml
mission/failsafe_interface/launch/: failsafe.launch
mission/failsafe_interface/scripts/: README  current_failsafe.py  failsafe_interface_node.py  gpio_functions.py  software_operation_mode.py  test.py
mission/internal_status/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
mission/internal_status/internal_status/: power_sense_module_lib.py  power_sense_module_publisher.py  test_lib.py
mission/internal_status/launch/: internal_status_launch.py
mission/internal_status/src/: MCP342X.cpp  MCP342X.h  Martynas_test.cpp  battery_monitor.py  battery_monitor_lib.cpp  battery_monitor_lib.py  battery_monitor_node.py  smbus.h
mission/internal_status/startup_scripts/: internal_status.service  internal_status.sh
mission/joystick_interface/: CMakeLists.txt  README.md  package.xml
mission/joystick_interface/config/: param_joystick_interface.yaml  params.yaml
mission/joystick_interface/joystick_interface/: joystick_interface.py
mission/joystick_interface/launch/: joystick_interface.launch.py  joystick_interface.launch.yaml  joystick_interface_launch.yaml
mission/joystick_interface/scripts/: joystick_interface.py
mission/joystick_interface/test/: test_joystick_interface.py
mission/joystick_interface/tests/: test_joystick_interface.py
mission/joystick_interface_asv/: CMakeLists.txt  README.md  package.xml
mission/joystick_interface_asv/config/: param_joystick_interface.yaml
mission/joystick_interface_asv/joystick_interface_asv/: joystick_interface_asv_node.py  joystick_utils.py
mission/joystick_interface_asv/launch/: joystick_interface_asv.launch.py
mission/landmark_server/: CMakeLists.txt  README.md  package.xml
mission/landmark_server/launch/: landmark_server_launch.py
mission/landmark_server/src/: grid_manager.cpp  (+2 more)
mission/landmarks/: CMakeLists.txt  package.xml
mission/map_manager/: CMakeLists.txt  package.xml
mission/mission_planner/: CMakeLists.txt  package.xml
mission/sea_marker_task_njord/: CMakeLists.txt  new_sea_markers.py  package.xml  sea_marker_task_fsm.py  sea_marker_task_states.py  setup.py
mission/system_monitor/: CMakeLists.txt  README.md  package.xml  setup.py
mission/waypoint_manager/: package.xml
motion/colav/: CMakeLists.txt  package.xml
motion/control_simulator/: CMakeLists.txt  package.xml
vortex_msgs/: CMakeLists.txt
vortex_msgs/action/: DpMoveBase.action  LosPathFollowing.action
vortex_msgs/msg/: OdometryArray.msg
vortex_msgs/srv/: ControlMode.srv  Waypoint.srv  WaypointRemove.srv  WaypointUpdate.srv
(+487 files in other folders)
