<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hybridpath_guidance</name>
  <version>0.0.0</version>
  <description>This package provides the implementation of hybrid path guidance for the Vortex ASV.</description>
  <maintainer email="martiniuss.wan@gmail.com">vortex</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>python-transforms3d-pip</depend>
  <depend>geometry_msgs</depend>
  <depend>vortex_msgs</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
