<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hybridpath_guidance</name>
  <version>0.0.0</version>
  <description>This package provides the implementation of hybrid path guidance for the Vortex ASV.</description>
  <maintainer email="martiniuss.wan@gmail.com">vortex</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vortex_msgs</depend>
  <depend>vortex_utils</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
