<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blackbox</name>
  <version>1.0.0</version>
  <description>Logs all ROS2 data and other internal statuses to a data file for use in analizing data latern</description>
  <maintainer email="rose.j.kapps@gmail.com">vortex</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>ros2launch</depend>

  <depend>blackbox_log_data</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
