<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blackbox</name>
  <version>1.0.0</version>
  <description>Logs all ROS2 data and other internal statuses to a data file for use in analyzing data latern</description>
  <maintainer email="rose.j.kapps@gmail.com">vortex</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
