<?xml version="1.0"?>
<package>

  <name>failsafe_interface</name>
  <version>0.0.0</version>
  <description>Provides an interface between the various failsafe and operation modes both software and hardware side.</description>
  <maintainer email="theoam@stud.ntnu.no">Theo Martin</maintainer>
  <license>MIT</license>
  <url type="website">http://vortexntnu.no/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>vortex_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>vortex_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospkg</run_depend>
  <run_depend>python-scipy</run_depend>

</package>