<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>internal_status</name>
  <version>0.0.0</version>
  <description>Publisher of the PSM voltage and current data</description>
  <maintainer email="rose.j.kapps@gmail.com">vortex</maintainer>
  <license>Apache License 2.0</license>


  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
