<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joystick_interface</name>
  <version>0.0.0</version>
  <description>Joystick interface package</description>

  <maintainer email="aleksos@ntnu.no">aleksos</maintainer>

  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>joy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
