<?xml version="1.0"?>
<package format="2">
  <name>njord_fsm</name>
  <version>0.0.0</version>
  <description>The sea_marker_task_fsm package</description>

  <maintainer email="sigurdvbrandis@gmail.com">Sigurd von Brandis</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>vortex_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>vortex_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>vortex_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>

  <exec_depend>geometry_msgs</exec_depend>

</package>