<?xml version="1.0"?>
<package format="2">
  <name>colav</name>
  <version>0.0.0</version>
  <description>The colav package</description>

  <maintainer email="ronja@todo.todo">ronja</maintainer>
  <maintainer email="elias@todo.todo">elias</maintainer>
  <maintainer email="oskar@todo.todo">oskar</maintainer>
  <license>MIT</license>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>reference_model</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>vortex_msgs</build_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>reference_model</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>vortex_msgs</build_export_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>reference_model</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>vortex_msgs</exec_depend>

  <export>

  </export>
</package>
