<?xml version="1.0"?>
<package format="2">
  <name>control_simulator</name>
  <version>0.0.0</version>
  <description>The control_simulator package</description>
  <maintainer email="detoxte@gmail.com">Christopher Strøm</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
